test: add DocumentServiceTest and update similarity search
- Add DocumentServiceTest with 5 test cases for chunking, upload, search
- Update MilvusVectorStoreServiceImpl to use real similarity scoring with EmbeddingService
- All 22 RAG tests pass

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>