@@ -8,14 +8,16 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 @Service
 public class MilvusVectorStoreServiceImpl implements VectorStoreService {
 
     private static final Logger log = LoggerFactory.getLogger(MilvusVectorStoreServiceImpl.class);
 
-    private final Map<String, Map<String, DocumentChunk>> collections = new HashMap<>();
     private final EmbeddingService embeddingService;
+    private final Map<String, List<DocumentChunk>> collections = new ConcurrentHashMap<>();
 
     public MilvusVectorStoreServiceImpl(EmbeddingService embeddingService) {
         this.embeddingService = embeddingService;
@@ -24,38 +26,38 @@ public class MilvusVectorStoreServiceImpl implements VectorStoreService {
     @Override
     public void createCollectionIfNotExists(String collectionName, int dimension) {
         log.info("Creating collection: {} with dimension: {}", collectionName, dimension);
-        collections.computeIfAbsent(collectionName, k -> new HashMap<>());
+        collections.computeIfAbsent(collectionName, k -> new ArrayList<>());
     }
 
     @Override
     public void insert(String collectionName, List<DocumentChunk> chunks) {
-        Map<String, DocumentChunk> collection = collections.computeIfAbsent(collectionName, k -> new HashMap<>());
-        for (DocumentChunk chunk : chunks) {
-            collection.put(chunk.getId(), chunk);
-        }
-        log.info("Inserted {} chunks into collection: {}", chunks.size(), collectionName);
+        List<DocumentChunk> collection = collections.computeIfAbsent(collectionName, k -> new ArrayList<>());
+        collection.addAll(chunks);
+        log.info("Inserted {} chunks into collection: {} (total: {})", chunks.size(), collectionName, collection.size());
     }
 
     @Override
     public List<SearchResult> similaritySearch(String collectionName, String queryText, int topK) {
-        Map<String, DocumentChunk> collection = collections.get(collectionName);
+        List<DocumentChunk> collection = collections.get(collectionName);
         if (collection == null || collection.isEmpty()) {
             log.warn("Collection {} is empty or does not exist", collectionName);
             return List.of();
         }
 
-        var queryEmbedding = embeddingService.embed(queryText);
-        var queryVec = queryEmbedding.getVector();
-
+        float[] queryVector = embeddingService.embed(queryText).getVector();
+        
         List<SearchResult> results = new ArrayList<>();
-        for (DocumentChunk chunk : collection.values()) {
-            var chunkEmbedding = embeddingService.embed(chunk.getContent());
-            double score = embeddingService.cosineSimilarity(queryVec, chunkEmbedding.getVector());
+        for (DocumentChunk chunk : collection) {
+            float[] chunkVector = embeddingService.embed(chunk.getContent()).getVector();
+            double score = embeddingService.cosineSimilarity(queryVector, chunkVector);
             results.add(new SearchResult(chunk.getId(), chunk.getContent(), score, chunk.getMetadata()));
         }
 
         results.sort((a, b) -> Double.compare(b.score(), a.score()));
-        return results.stream().limit(topK).toList();
+        List<SearchResult> topResults = results.stream().limit(topK).collect(Collectors.toList());
+        
+        log.info("Search '{}' returned {} results from {} chunks", queryText, topResults.size(), collection.size());
+        return topResults;
     }
 
     @Override
@@ -67,7 +69,7 @@ public class MilvusVectorStoreServiceImpl implements VectorStoreService {
     public List<SearchResult> similaritySearchWithFilter(String collectionName, String queryText, int topK, Map<String, String> filter) {
         List<SearchResult> results = similaritySearch(collectionName, queryText, topK * 2);
         if (filter == null || filter.isEmpty()) {
-            return results.stream().limit(topK).toList();
+            return results.stream().limit(topK).collect(Collectors.toList());
         }
 
         return results.stream()
@@ -81,14 +83,14 @@ public class MilvusVectorStoreServiceImpl implements VectorStoreService {
                 return true;
             })
             .limit(topK)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     @Override
     public void deleteByIds(String collectionName, List<String> ids) {
-        Map<String, DocumentChunk> collection = collections.get(collectionName);
+        List<DocumentChunk> collection = collections.get(collectionName);
         if (collection != null) {
-            ids.forEach(collection::remove);
+            collection.removeIf(c -> ids.contains(c.getId()));
             log.info("Deleted {} chunks from collection: {}", ids.size(), collectionName);
         }
     }
@@ -101,8 +103,8 @@ public class MilvusVectorStoreServiceImpl implements VectorStoreService {
 
     @Override
     public CollectionStats getCollectionStats(String collectionName) {
-        Map<String, DocumentChunk> collection = collections.get(collectionName);
+        List<DocumentChunk> collection = collections.get(collectionName);
         int count = collection != null ? collection.size() : 0;
-        return new CollectionStats(count, 1536);
+        return new CollectionStats(count, embeddingService.getEmbeddingDimension());
     }
 }
